--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p><a href="hobbies.html" target="_blank">Hobbies</a></p>
     <a href="contact.html">Contact Detalis</a>
+    <a href="tables.html">CV</a>
 </body>
 </html>
